--- a/Signal/translations/ar.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ar.lproj/PluralAware.stringsdict
@@ -98,6 +98,54 @@
 			<string>إضافة أعضاء جُدد</string>
 		</dict>
 	</dict>
+	<key>CALL_PEOPLE_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>zero</key>
+			<string>%1$ld people</string>
+			<key>one</key>
+			<string>%1$ld person</string>
+			<key>two</key>
+			<string>%1$ld people</string>
+			<key>few</key>
+			<string>%1$ld people</string>
+			<key>many</key>
+			<string>%1$ld people</string>
+			<key>other</key>
+			<string>%1$ld people</string>
+		</dict>
+	</dict>
+	<key>CALL_PEOPLE_WAITING</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>zero</key>
+			<string>%1$ld people waiting</string>
+			<key>one</key>
+			<string>%1$ld person waiting</string>
+			<key>two</key>
+			<string>%1$ld people waiting</string>
+			<key>few</key>
+			<string>%1$ld people waiting</string>
+			<key>many</key>
+			<string>%1$ld people waiting</string>
+			<key>other</key>
+			<string>%1$ld people waiting</string>
+		</dict>
+	</dict>
 	<key>CAMERA_VO_N_ITEMS</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
@@ -549,6 +597,30 @@
 			<string>جارٍ الاتصال بـ %2$@ و %3$@ و %1$d آخرين…</string>
 		</dict>
 	</dict>
+	<key>GROUP_CALL_MANY_OTHERS_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>zero</key>
+			<string>%1$ld people are in this call</string>
+			<key>one</key>
+			<string>%1$ld person is in this call</string>
+			<key>two</key>
+			<string>%1$ld people are in this call</string>
+			<key>few</key>
+			<string>%1$ld people are in this call</string>
+			<key>many</key>
+			<string>%1$ld people are in this call</string>
+			<key>other</key>
+			<string>%1$ld people are in this call</string>
+		</dict>
+	</dict>
 	<key>GROUP_CALL_MANY_PEOPLE_HERE_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
@@ -619,6 +691,30 @@
 			<string>غادر %2$@ و %3$@ و %1$d أشخاص آخرين هذه المُكالمة</string>
 			<key>other</key>
 			<string>غادر %2$@ و %3$@ و %1$d أشخاص آخرين هذه المُكالمة</string>
+		</dict>
+	</dict>
+	<key>GROUP_CALL_ONE_KNOWN_AND_MANY_OTHERS_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>zero</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>one</key>
+			<string>%2$@ and %1$ld other person are in this call</string>
+			<key>two</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>few</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>many</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>other</key>
+			<string>%2$@ and %1$ld others are in this call</string>
 		</dict>
 	</dict>
 	<key>GROUP_CALL_WILL_NOTIFY_MANY_PEOPLE_%d</key>
