--- a/Signal/translations/ga.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ga.lproj/PluralAware.stringsdict
@@ -90,6 +90,50 @@
 			<string>Cuir Baill Nua Leis</string>
 		</dict>
 	</dict>
+	<key>CALL_PEOPLE_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%1$ld person</string>
+			<key>two</key>
+			<string>%1$ld people</string>
+			<key>few</key>
+			<string>%1$ld people</string>
+			<key>many</key>
+			<string>%1$ld people</string>
+			<key>other</key>
+			<string>%1$ld people</string>
+		</dict>
+	</dict>
+	<key>CALL_PEOPLE_WAITING</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%1$ld person waiting</string>
+			<key>two</key>
+			<string>%1$ld people waiting</string>
+			<key>few</key>
+			<string>%1$ld people waiting</string>
+			<key>many</key>
+			<string>%1$ld people waiting</string>
+			<key>other</key>
+			<string>%1$ld people waiting</string>
+		</dict>
+	</dict>
 	<key>CAMERA_VO_N_ITEMS</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
@@ -503,6 +547,28 @@
 			<string>Glao á chur ar %2$@, %3$@, agus ar %1$d duine eile…</string>
 		</dict>
 	</dict>
+	<key>GROUP_CALL_MANY_OTHERS_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%1$ld person is in this call</string>
+			<key>two</key>
+			<string>%1$ld people are in this call</string>
+			<key>few</key>
+			<string>%1$ld people are in this call</string>
+			<key>many</key>
+			<string>%1$ld people are in this call</string>
+			<key>other</key>
+			<string>%1$ld people are in this call</string>
+		</dict>
+	</dict>
 	<key>GROUP_CALL_MANY_PEOPLE_HERE_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
@@ -567,6 +633,28 @@
 			<string>D&apos;imigh %2$@, %3$@ agus %1$d nduine eile as an nglao</string>
 			<key>other</key>
 			<string>D&apos;imigh %2$@, %3$@ agus %1$d duine eile as an nglao</string>
+		</dict>
+	</dict>
+	<key>GROUP_CALL_ONE_KNOWN_AND_MANY_OTHERS_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%2$@ and %1$ld other person are in this call</string>
+			<key>two</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>few</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>many</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>other</key>
+			<string>%2$@ and %1$ld others are in this call</string>
 		</dict>
 	</dict>
 	<key>GROUP_CALL_WILL_NOTIFY_MANY_PEOPLE_%d</key>
