--- a/Signal/translations/uk.lproj/PluralAware.stringsdict
+++ b/Signal/translations/uk.lproj/PluralAware.stringsdict
@@ -82,6 +82,46 @@
 			<string>Додати нових учасників</string>
 		</dict>
 	</dict>
+	<key>CALL_PEOPLE_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%1$ld person</string>
+			<key>few</key>
+			<string>%1$ld people</string>
+			<key>many</key>
+			<string>%1$ld people</string>
+			<key>other</key>
+			<string>%1$ld people</string>
+		</dict>
+	</dict>
+	<key>CALL_PEOPLE_WAITING</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%1$ld person waiting</string>
+			<key>few</key>
+			<string>%1$ld people waiting</string>
+			<key>many</key>
+			<string>%1$ld people waiting</string>
+			<key>other</key>
+			<string>%1$ld people waiting</string>
+		</dict>
+	</dict>
 	<key>CAMERA_VO_N_ITEMS</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
@@ -457,6 +497,26 @@
 			<string>Виклик: %2$@, %3$@ і %1$d інших…</string>
 		</dict>
 	</dict>
+	<key>GROUP_CALL_MANY_OTHERS_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%1$ld person is in this call</string>
+			<key>few</key>
+			<string>%1$ld people are in this call</string>
+			<key>many</key>
+			<string>%1$ld people are in this call</string>
+			<key>other</key>
+			<string>%1$ld people are in this call</string>
+		</dict>
+	</dict>
 	<key>GROUP_CALL_MANY_PEOPLE_HERE_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
@@ -515,6 +575,26 @@
 			<string>%2$@, %3$@ і ще %1$d покинули виклик</string>
 			<key>other</key>
 			<string>%2$@, %3$@ і ще %1$d покинули виклик</string>
+		</dict>
+	</dict>
+	<key>GROUP_CALL_ONE_KNOWN_AND_MANY_OTHERS_HERE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%2$@ and %1$ld other person are in this call</string>
+			<key>few</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>many</key>
+			<string>%2$@ and %1$ld others are in this call</string>
+			<key>other</key>
+			<string>%2$@ and %1$ld others are in this call</string>
 		</dict>
 	</dict>
 	<key>GROUP_CALL_WILL_NOTIFY_MANY_PEOPLE_%d</key>
@@ -888,13 +968,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Ви не можете поділитись більш ніж 1 елементом.</string>
+			<string>Ви можете надіслати максимум %1$d файл.</string>
 			<key>few</key>
-			<string>Ви не можете поділитись більш ніж %1$d елементами.</string>
+			<string>Ви можете надіслати максимум %1$d файли.</string>
 			<key>many</key>
-			<string>Ви не можете поділитись більш ніж %1$d елементами.</string>
+			<string>Ви можете надіслати максимум %1$d файлів.</string>
 			<key>other</key>
-			<string>Ви не можете поділитись більш ніж %1$d елементу.</string>
+			<string>Ви можете надіслати максимум %1$d файлу.</string>
 		</dict>
 	</dict>
 	<key>INACTIVE_LINKED_DEVICE_REMINDER_MEGAPHONE_BODY_%d</key>
@@ -1308,13 +1388,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%1$d запит учасника очікує на розгляд.</string>
+			<string>Не розглянуто %1$d запит на приєднання.</string>
 			<key>few</key>
-			<string>%1$d запити учасників очікують на розгляд.</string>
+			<string>Не розглянуто %1$d запити на приєднання.</string>
 			<key>many</key>
-			<string>%1$d запитів учасників очікують на розгляд.</string>
+			<string>Не розглянуто %1$d запитів на приєднання.</string>
 			<key>other</key>
-			<string>%1$d запиту учасників очікують на розгляд.</string>
+			<string>Не розглянуто %1$d запиту на приєднання.</string>
 		</dict>
 	</dict>
 	<key>PENDING_GROUP_MEMBERS_REVOKE_INVALID_INVITES_%d</key>
