--- a/Signal/translations/nb.lproj/PluralAware.stringsdict
+++ b/Signal/translations/nb.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Denne samtalen slettes fra denne enheten.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>Disse samtalene vil slettes fra enheten.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
