--- a/Signal/translations/ar.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ar.lproj/PluralAware.stringsdict
@@ -253,17 +253,17 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>zero</key>
-			<string>ستُحذَف هذه الدردشة من هذا الجهاز.</string>
+			<string>These chats will be deleted from all your devices.</string>
 			<key>one</key>
-			<string>ستُحذَف هذه الدردشة من هذا الجهاز.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>two</key>
-			<string>ستُحذَف هاتيْن الدردشتين من هذا الجهاز.</string>
+			<string>These chats will be deleted from all your devices.</string>
 			<key>few</key>
-			<string>ستُحذَف هذه الدردشات من هذا الجهاز.</string>
+			<string>These chats will be deleted from all your devices.</string>
 			<key>many</key>
-			<string>ستُحذَف هذه الدردشات من هذا الجهاز.</string>
+			<string>These chats will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>ستُحذَف هذه الدردشات من هذا الجهاز.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
