--- a/Signal/translations/bn.lproj/PluralAware.stringsdict
+++ b/Signal/translations/bn.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>এই চ্যাটটি এই ডিভাইস থেকে মুছে ফেলা হবে।</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>এই চ্যাটগুলি এই ডিভাইস থেকে মুছে ফেলা হবে।</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
