--- a/Signal/translations/ca.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ca.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Aquest xat s&apos;eliminarà del dispositiu.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>Aquests xats s&apos;eliminaran d&apos;aquest dispositiu.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
