--- a/Signal/translations/el.lproj/PluralAware.stringsdict
+++ b/Signal/translations/el.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Αυτή η συνομιλία θα διαγραφεί από αυτή τη συσκευή.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>Αυτές οι συνομιλίες θα διαγραφούν από αυτή τη συσκευή.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
