--- a/Signal/translations/es.lproj/PluralAware.stringsdict
+++ b/Signal/translations/es.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Este chat se eliminará de este dispositivo.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>Estos chats se eliminarán de este dispositivo.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
