--- a/Signal/translations/he.lproj/PluralAware.stringsdict
+++ b/Signal/translations/he.lproj/PluralAware.stringsdict
@@ -213,13 +213,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>צ&apos;אט זה יימחק ממכשיר זה.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>two</key>
-			<string>צ׳אטים אלו יימחקו ממכשיר זה.</string>
+			<string>These chats will be deleted from all your devices.</string>
 			<key>many</key>
-			<string>צ׳אטים אלו יימחקו ממכשיר זה.</string>
+			<string>These chats will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>צ׳אטים אלו יימחקו ממכשיר זה.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
