--- a/Signal/translations/hr.lproj/PluralAware.stringsdict
+++ b/Signal/translations/hr.lproj/PluralAware.stringsdict
@@ -213,13 +213,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Razgovor će biti izbrisan s ovog uređaja.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>few</key>
-			<string>Razgovori će biti izbrisani s ovog uređaja.</string>
+			<string>These chats will be deleted from all your devices.</string>
 			<key>many</key>
-			<string>Razgovori će biti izbrisani s ovog uređaja.</string>
+			<string>These chats will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>Razgovori će biti izbrisani s ovog uređaja.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
