--- a/Signal/translations/mr.lproj/PluralAware.stringsdict
+++ b/Signal/translations/mr.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>हा चॅट या डिव्हाइस वरून हटवला जाईल.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>हे चॅट्स या डिव्हाइसमधून हटवले जातील.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
