--- a/Signal/translations/nl.lproj/PluralAware.stringsdict
+++ b/Signal/translations/nl.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Deze chat zal alleen op dit apparaat worden verwijderd.</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>Deze chats zullen alleen op dit apparaat worden verwijderd.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
