--- a/Signal/translations/ur.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ur.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>یہ چیٹ اس ڈیوائس سے حذف کر دی جائے گی۔</string>
+			<string>This chat will be deleted from all your devices.</string>
 			<key>other</key>
-			<string>یہ چیٹس اس ڈیوائس سے حذف کر دی جائیں گی۔</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
