--- a/Signal/translations/vi.lproj/PluralAware.stringsdict
+++ b/Signal/translations/vi.lproj/PluralAware.stringsdict
@@ -153,7 +153,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>Các cuộc trò chuyện này sẽ được xóa khỏi thiết bị này.</string>
+			<string>These chats will be deleted from all your devices.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
