--- a/Signal/translations/bn.lproj/PluralAware.stringsdict
+++ b/Signal/translations/bn.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>এই চ্যাটটি এই ডিভাইস থেকে মুছে ফেলা হবে।</string>
+			<string>এই চ্যাটটি আপনার সকল ডিভাইস থেকে মুছে যাবে।</string>
 			<key>other</key>
-			<string>এই চ্যাটগুলি এই ডিভাইস থেকে মুছে ফেলা হবে।</string>
+			<string>এই চ্যাটগুলো আপনার সকল ডিভাইস থেকে মুছে যাবে।</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>কাস্টম স্টোরি · %1$d জন দর্শক</string>
 			<key>other</key>
 			<string>কাস্টম স্টোরি · %1$d জন দর্শক</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
