--- a/Signal/translations/ca.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ca.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Aquest xat s&apos;eliminarà del dispositiu.</string>
+			<string>Aquest xat s&apos;eliminarà de tots els teus dispositius.</string>
 			<key>other</key>
-			<string>Aquests xats s&apos;eliminaran d&apos;aquest dispositiu.</string>
+			<string>Aquests xats s&apos;eliminaran de tots els teus dispositius.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>Història personalitzada · %1$d espectador</string>
 			<key>other</key>
 			<string>Història personalitzada · %1$d espectadors</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
