--- a/Signal/translations/da.lproj/PluralAware.stringsdict
+++ b/Signal/translations/da.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Chat vil blive slettet fra denne enhed.</string>
+			<string>Denne chat vil blive slettet fra alle dine enheder.</string>
 			<key>other</key>
-			<string>Disse chats vil blive slettet fra denne enhed.</string>
+			<string>Disse chats vil blive slettet fra alle dine enheder.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>Brugerdefineret historie · %1$d seer</string>
 			<key>other</key>
 			<string>Brugerdefineret historie · %1$d seere</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
