--- a/Signal/translations/de.lproj/PluralAware.stringsdict
+++ b/Signal/translations/de.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Dieser Chat wird von diesem Gerät gelöscht.</string>
+			<string>Dieser Chat wird von all deinen Geräten gelöscht.</string>
 			<key>other</key>
-			<string>Diese Chats werden von diesem Gerät gelöscht.</string>
+			<string>Diese Chats werden von all deinen Geräten gelöscht.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -504,9 +504,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Signal ruft %2$@, %3$@ und %1$d weitere Person an</string>
+			<string>Signal wird bei %2$@, %3$@ und %1$d weiteren Person klingeln</string>
 			<key>other</key>
-			<string>Signal ruft %2$@, %3$@ und %1$d weitere Personen an</string>
+			<string>Signal wird bei %2$@, %3$@ und %1$d weiteren Personen klingeln</string>
 		</dict>
 	</dict>
 	<key>GROUP_INVITES_SENT_ALERT_TITLE_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>Benutzerdefinierte Story · %1$d Betrachter</string>
 			<key>other</key>
 			<string>Benutzerdefinierte Story · %1$d Betrachter</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
