--- a/Signal/translations/el.lproj/PluralAware.stringsdict
+++ b/Signal/translations/el.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Αυτή η συνομιλία θα διαγραφεί από αυτή τη συσκευή.</string>
+			<string>Αυτή η συνομιλία θα διαγραφεί από όλες τις συσκευές σου.</string>
 			<key>other</key>
-			<string>Αυτές οι συνομιλίες θα διαγραφούν από αυτή τη συσκευή.</string>
+			<string>Αυτές οι συνομιλίες θα διαγραφούν από όλες τις συσκευές σου.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>Προσαρμοσμένη ιστορία · %1$d θεατής</string>
 			<key>other</key>
 			<string>Προσαρμοσμένη ιστορία · %1$d θεατές</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
