--- a/Signal/translations/fi.lproj/PluralAware.stringsdict
+++ b/Signal/translations/fi.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Tämä keskustelu poistetaan tältä laitteelta.</string>
+			<string>Tämä keskustelu poistetaan kaikilta laitteiltasi.</string>
 			<key>other</key>
-			<string>Nämä keskustelut poistetaan tältä laitteelta.</string>
+			<string>Nämä keskustelut poistetaan kaikilta laitteiltasi.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>Mukautettu tarina · %1$d katsoja</string>
 			<key>other</key>
 			<string>Mukautettu tarina · %1$d katsojaa</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
