--- a/Signal/translations/ga.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ga.lproj/PluralAware.stringsdict
@@ -233,15 +233,15 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Scriosfar an comhrá seo ón ngléas seo.</string>
+			<string>Scriosfar an comhrá seo ó do ghléasanna uile.</string>
 			<key>two</key>
-			<string>Scriosfar na comhráite seo ón ngléas seo.</string>
+			<string>Scriosfar na comhráite seo ó do ghléasanna uile.</string>
 			<key>few</key>
-			<string>Scriosfar na comhráite seo ón ngléas seo.</string>
+			<string>Scriosfar na comhráite seo ó do ghléasanna uile.</string>
 			<key>many</key>
-			<string>Scriosfar na comhráite seo ón ngléas seo.</string>
+			<string>Scriosfar na comhráite seo ó do ghléasanna uile.</string>
 			<key>other</key>
-			<string>Scriosfar na comhráite seo ón ngléas seo.</string>
+			<string>Scriosfar na comhráite seo ó do ghléasanna uile.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1623,6 +1623,28 @@
 			<string>Scéal Saincheaptha · %1$d nAmharcóir</string>
 			<key>other</key>
 			<string>Scéal Saincheaptha · %1$d Amharcóir</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>two</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>few</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>many</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
