--- a/Signal/translations/he.lproj/PluralAware.stringsdict
+++ b/Signal/translations/he.lproj/PluralAware.stringsdict
@@ -213,13 +213,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>צ&apos;אט זה יימחק ממכשיר זה.</string>
+			<string>צ&apos;אט זה יימחק מכל המכשירים שלך.</string>
 			<key>two</key>
-			<string>צ׳אטים אלו יימחקו ממכשיר זה.</string>
+			<string>צ׳אטים אלה יימחקו מכל המכשירים שלך.</string>
 			<key>many</key>
-			<string>צ׳אטים אלו יימחקו ממכשיר זה.</string>
+			<string>צ׳אטים אלה יימחקו מכל המכשירים שלך.</string>
 			<key>other</key>
-			<string>צ׳אטים אלו יימחקו ממכשיר זה.</string>
+			<string>צ׳אטים אלה יימחקו מכל המכשירים שלך.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1475,6 +1475,26 @@
 			<string>סטורי מותאם אישית · %1$d צופים</string>
 			<key>other</key>
 			<string>סטורי מותאם אישית · %1$d צופים</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>two</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>many</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
