--- a/Signal/translations/hr.lproj/PluralAware.stringsdict
+++ b/Signal/translations/hr.lproj/PluralAware.stringsdict
@@ -213,13 +213,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Razgovor će biti izbrisan s ovog uređaja.</string>
+			<string>Ovaj razgovor bit će izbrisan sa svih vaših uređaja.</string>
 			<key>few</key>
-			<string>Razgovori će biti izbrisani s ovog uređaja.</string>
+			<string>Ovi razgovori bit će izbrisani sa svih vaših uređaja.</string>
 			<key>many</key>
-			<string>Razgovori će biti izbrisani s ovog uređaja.</string>
+			<string>Ovi razgovori bit će izbrisani sa svih vaših uređaja.</string>
 			<key>other</key>
-			<string>Razgovori će biti izbrisani s ovog uređaja.</string>
+			<string>Ovi razgovori bit će izbrisani sa svih vaših uređaja.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1475,6 +1475,26 @@
 			<string>Prilagođena priča · %1$d gledatelja</string>
 			<key>other</key>
 			<string>Prilagođena priča · %1$d gledatelja</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>few</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>many</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
