--- a/Signal/translations/hu.lproj/PluralAware.stringsdict
+++ b/Signal/translations/hu.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>A csevegés ezen az eszközön törlésre kerül.</string>
+			<string>Ez a csevegés minden kapcsolt eszközödön törlésre kerül.</string>
 			<key>other</key>
-			<string>Ezek a csevegések ezen az eszközön törlésre kerülnek.</string>
+			<string>Ezek a csevegések minden kapcsolt eszközödön törlésre kerülnek.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>Egyéni Történet · %1$d néző</string>
 			<key>other</key>
 			<string>Egyéni Történet · %1$d néző</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
