--- a/Signal/translations/mr.lproj/PluralAware.stringsdict
+++ b/Signal/translations/mr.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>हा चॅट या डिव्हाइस वरून हटवला जाईल.</string>
+			<string>हा चॅट आपल्या सर्व डिव्हाइसेसवरून हटवला जाईल.</string>
 			<key>other</key>
-			<string>हे चॅट्स या डिव्हाइसमधून हटवले जातील.</string>
+			<string>हे चॅट्स आपल्या सर्व डिव्हाइसेसवरून हटवले जातील.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>सानुकूल स्टोरी · %1$d दर्शक</string>
 			<key>other</key>
 			<string>सानुकूल स्टोरी %1$d दर्शक</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
