--- a/Signal/translations/pl.lproj/PluralAware.stringsdict
+++ b/Signal/translations/pl.lproj/PluralAware.stringsdict
@@ -213,13 +213,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Ten czat zostanie usunięty z tego urządzenia.</string>
+			<string>Ten czat zostanie usunięty ze wszystkich Twoich urządzeń.</string>
 			<key>few</key>
-			<string>Te czaty zostaną usunięte z tego urządzenia.</string>
+			<string>Te czaty zostaną usunięte ze wszystkich Twoich urządzeń.</string>
 			<key>many</key>
-			<string>Te czaty zostaną usunięte z tego urządzenia.</string>
+			<string>Te czaty zostaną usunięte ze wszystkich Twoich urządzeń.</string>
 			<key>other</key>
-			<string>Te czaty zostaną usunięte z tego urządzenia.</string>
+			<string>Te czaty zostaną usunięte ze wszystkich Twoich urządzeń.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1475,6 +1475,26 @@
 			<string>Relacja niestandardowa · %1$d odbiorców</string>
 			<key>other</key>
 			<string>Relacja niestandardowa · %1$d odbiorców</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>few</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>many</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
