--- a/Signal/translations/pt_BR.lproj/PluralAware.stringsdict
+++ b/Signal/translations/pt_BR.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Este chat será excluído do dispositivo.</string>
+			<string>Esta conversa será excluída de todos os seus dispositivos.</string>
 			<key>other</key>
-			<string>Estes chats serão apagados deste dispositivo.</string>
+			<string>Estas conversas serão excluídas de todos os seus dispositivos.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>Story personalizado · %1$d visualizador</string>
 			<key>other</key>
 			<string>Story personalizado · %1$d visualizadores</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
