--- a/Signal/translations/ro.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ro.lproj/PluralAware.stringsdict
@@ -193,11 +193,11 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Această conversație va fi ștearsă de pe acest dispozitiv.</string>
+			<string>Această conversație va fi ștearsă de pe toate dispozitivele tale asociate.</string>
 			<key>few</key>
-			<string>Aceste conversații vor fi șterse de pe acest dispozitiv.</string>
+			<string>Aceste conversații vor fi șterse de pe toate dispozitivele tale asociate.</string>
 			<key>other</key>
-			<string>Aceste conversații vor fi șterse de pe acest dispozitiv.</string>
+			<string>Aceste conversații vor fi șterse de pe toate dispozitivele tale asociate.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1327,6 +1327,24 @@
 			<string>Poveste personalizată · %1$d spectatori</string>
 			<key>other</key>
 			<string>Poveste personalizată · %1$d de spectatori</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>few</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
