--- a/Signal/translations/sr.lproj/PluralAware.stringsdict
+++ b/Signal/translations/sr.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Ћаскање ће бити избрисано са овог уређаја.</string>
+			<string>Ћаскање ће бити избрисано са свих ваших уређаја.</string>
 			<key>other</key>
-			<string>Ћаскања ће бити избрисана са овог уређаја.</string>
+			<string>Ћаскања ће бити избрисана са свих ваших уређаја.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>Прича · Гледалаца: %1$d</string>
 			<key>other</key>
 			<string>Прича · Гледалаца: %1$d</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
