--- a/Signal/translations/ur.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ur.lproj/PluralAware.stringsdict
@@ -173,9 +173,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>یہ چیٹ اس ڈیوائس سے حذف کر دی جائے گی۔</string>
+			<string>• یہ چیٹ آپ کی تمام ڈیوائسز سے حذف کر دی جائے گی۔</string>
 			<key>other</key>
-			<string>یہ چیٹس اس ڈیوائس سے حذف کر دی جائیں گی۔</string>
+			<string>• یہ چیٹس آپ کی تمام ڈیواسز سے حذف کر دی جائیں گی۔</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1179,6 +1179,22 @@
 			<string>کسٹم سٹوری · %1$d ناظر</string>
 			<key>other</key>
 			<string>کسٹم سٹوری · %1$d ناظرین</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
