--- a/Signal/translations/vi.lproj/PluralAware.stringsdict
+++ b/Signal/translations/vi.lproj/PluralAware.stringsdict
@@ -153,7 +153,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>Các cuộc trò chuyện này sẽ được xóa khỏi thiết bị này.</string>
+			<string>Những cuộc trò chuyện này sẽ được xóa khỏi tất cả thiết bị của bạn.</string>
 		</dict>
 	</dict>
 	<key>CONVERSATION_PICKER_CAN_SELECT_NO_MORE_CONVERSATIONS_%d</key>
@@ -1031,6 +1031,20 @@
 			<string>d</string>
 			<key>other</key>
 			<string>Story Tùy chỉnh · %1$d Người xem</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>other</key>
+			<string>%1$@ and %2$d more have raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
